jquery is overrated

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button type="button" id="off" class="btn btn-danger">Off</button>
         </div>
       </div>
-      <form id="config">
+      <form id="config-form">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="minHumidity">Min Humidity</label>
